# SudokuTrainer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tmp_cli.json
.github/workflows/: ci.yml  release.yml
packaging/: pyinstaller_win.spec  release_notes_0.2.4.md
src/sudokutrainer/: __init__.py  __main__.py  app.py  cli.py
src/sudokutrainer/core/: board.py  validation.py
src/sudokutrainer/generator/: generator.py  presets.py
src/sudokutrainer/gui/: board_widget.py  dialogs.py  main_window.py  panels.py  theming.py
src/sudokutrainer/gui/resources/: qrc.qrc
src/sudokutrainer/hints/: engine.py
src/sudokutrainer/io/: formats.py
src/sudokutrainer/io/samples/: beginner.json  medium.json
src/sudokutrainer/services/: game_service.py  settings.py
src/sudokutrainer/solver/: backtracking.py  human_strategies.py  rating.py
src/sudokutrainer/tutorial/: lessons.py
tests/: test_board.py  test_cli.py  test_generator.py  test_gui_smoke.py  test_hints.py  test_io.py  test_solver.py  test_validation.py
